--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-09 21:14:09
+lastsearch = 2024-07-10 02:49:23
 
 [www.everonvn.vn]
 match = 27.7%%
@@ -12,9 +12,9 @@ title = Đệm lò xo King Koil Cloud Euro Top | Giảm giá 20%%
 url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Euro-Top.html
 
 [demxanh.com]
-match = 27.9%%
-title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
+match = 29.8%%
+title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -42,9 +42,9 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 29.8%%
-title = Everon Quảng Bình Nệm lò xo Everon Kingkoil Cloud Firm ...
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+match = 23.4%%
+title = Everon Quảng Bình Nệm lò xo Everon Bonnell 160x200x23
+url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
 
 [www.diepxuan.com]
 match = 41.5%%
