--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-10 02:15:04
+lastsearch = 2024-07-10 02:52:14
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -132,9 +132,9 @@ title = Wild Rift: Welcome to League of Legends
 url = https://wildrift.leagueoflegends.com/en-us/
 
 [books.google.com]
-match = -135.0%%
-title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek-nzNfU&sig=ACfU3U3JrE0UKiJciWqBi0RPpmB9FImseQ&hl=en&sa=X&ved=2ahUKEwjOoN7G1ZqHAxUBMlkFHQFvAGMQ6AF6BAgTEAM
+match = -140.0%%
+title = 1968 Annual Supplement - Page 1252 - Google Books Result
+url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+12&source=bl&ots=P-86hVjgdd&sig=ACfU3U1LZoROQCipwiQzos32q9BSfJcTng&hl=en&sa=X&ved=2ahUKEwjE2avu3ZqHAxXDl4kEHTvhAMYQ6AF6BAgSEAM
 
 [thehill.com]
 match = -105.0%%
