--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-10 00:16:19
+lastsearch = 2024-07-10 02:48:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -104,7 +104,7 @@ url = https://www.dol.gov/agencies/ofccp/debarred-list
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Western_Association_of_Schools_and_Colleges
+url = https://en.wikipedia.org/wiki/Debarment
 
 [www.johnknoop.com]
 match = 5.6%%
@@ -277,8 +277,8 @@ title = Service Directory (by State) - Optometry
 url = https://www.va.gov/optometry/service_directory_by_state.asp
 
 [www.usmcu.edu]
-match = 0.0%%
-title = VN Oral History Catalog.pdf
+match = 4.5%%
+title = United States Marine Corps
 url = https://www.usmcu.edu/Portals/218/VN Oral History Catalog.pdf
 
 [huggingface.co]
