--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-10 01:46:50
+lastsearch = 2024-07-10 02:44:45
 
 [gobearcats.com]
 match = -142.1%%
@@ -182,9 +182,9 @@ title = 2024 Fall Quarter/ Fall Semester Academic Calendar (All ...
 url = https://search.uconline.edu/docs/academic-calendar.pdf
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.1%%
+title = ADDITIONAL CASE INFORMATION
+url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -142.1%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
@@ -357,9 +357,9 @@ title =
 url = https://www.collegeadvisor.com/how-to-get-into/how-to-get-into-uc-davis-guide/
 
 [profiles.ucla.edu]
-match = 0.0%%
-title = Hilary Ann Coller
-url = https://profiles.ucla.edu/hilary.coller
+match = -5.9%%
+title = Matteo Pellegrini
+url = https://profiles.ucla.edu/matteo.pellegrini
 
 [eurointervention.pcronline.com]
 match = -126.3%%
