--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-10 00:35:52
+lastsearch = 2024-07-10 03:14:27
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -237.5%%
-title = [Xe oto] Cận cảnh thay trục các đăng dễ dàng tại nhà.Replace ...
-url = https://www.youtube.com/watch?v=AcbgCyfkyYc
+match = -150.0%%
+title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
+url = https://www.youtube.com/watch?v=6598XYpaW3E
 
 [hawater.com.vn]
 match = -75.0%%
@@ -97,8 +97,8 @@ title = luật poker omaha-App Store5.93.517
 url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
-match = -250.0%%
-title = PG-1
+match = -43.8%%
+title = PG-1 - Yamaha Motor Việt Nam
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
