--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-10 02:52:14
+lastsearch = 2024-07-10 03:16:47
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -140.0%%
 title = 1968 Annual Supplement - Page 1252 - Google Books Result
-url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+12&source=bl&ots=P-86hVjgdd&sig=ACfU3U1LZoROQCipwiQzos32q9BSfJcTng&hl=en&sa=X&ved=2ahUKEwjE2avu3ZqHAxXDl4kEHTvhAMYQ6AF6BAgSEAM
+url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+12&source=bl&ots=P-86hVlbaf&sig=ACfU3U2Y13EJEsmwRGX34w743dpT51flcw&hl=en&sa=X&ved=2ahUKEwiGsrSs45qHAxVnEFkFHV8CDBYQ6AF6BAgTEAM
 
 [thehill.com]
 match = -105.0%%
