--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-10 01:20:09
+lastsearch = 2024-07-10 04:34:31
 
 [www.instagram.com]
-match = -238.5%%
-title = Ke Huy Quan (@kehuyquan) • Instagram photos and videos
-url = https://www.instagram.com/kehuyquan/?hl=en
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -34,7 +34,7 @@ url = https://www.linklaters.com/en/sitemap
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Catherine_Dior
+url = https://en.wikipedia.org/wiki/Dior
 
 [press.fourseasons.com]
 match = -269.2%%
