--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-10 02:30:36
+lastsearch = 2024-07-10 04:33:02
 
 [www.instagram.com]
 match = -30.8%%
@@ -170,4 +170,9 @@ url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 match = -215.4%%
 title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
+
+[www.csus.edu]
+match = 7.7%%
+title = Dean's Honors List
+url = https://www.csus.edu/college/engineering-computer-science/about-the-college/deans-honors-list.html
 
