--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-09 23:35:11
+lastsearch = 2024-07-10 04:29:37
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -137.5%%
-title = Giá lợn hơi miền Bắc đang cao nhất cả nước | VTC16
-url = https://www.youtube.com/watch?v=Sya9k3x0Z6U
+match = -93.8%%
+title = Gà ủ rũ chết dần, cứu chữa ra sao? | VTC16
+url = https://www.youtube.com/watch?v=1zJIopY7o00
 
 [books.google.com]
 match = -250.0%%
