--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-10 03:51:57
+lastsearch = 2024-07-10 04:29:06
 
 [www.everonvn.vn]
 match = -22.6%%
@@ -95,4 +95,9 @@ url = https://nemhana.com/nem-bong-ep-everon-ceramic/
 match = 12.9%%
 title = Nệm Bông Ép Everon Giá Rẻ Chính Hãng
 url = https://vuanem.com/blog/nem-bong-ep-everon.html
+
+[www.lazada.vn]
+match = -38.7%%
+title = Nệm Bông Ép Gấp 3 K-Bedding By Everon nhiều kích ...
+url = https://www.lazada.vn/products/nem-bong-ep-gap-3-everon-lite-bao-hanh-5-nam-giao-mau-ngau-nhien-i559250099.html
 
