--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-10 05:20:50
+lastsearch = 2024-07-10 08:03:39
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 21
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.html
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Vỏ chăn ks DreamLand 200x230 - Điệp Xuân
-url = https://www.diepxuan.com/vo-chan-ks-dreamland-200x230.html
+match = 25.0%%
+title = Bộ chun xoa 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -67.9%%
-title = L'occitane body lotion singapore [FSnycw] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--h1aakbimdbl.xn--p1ai/59364718k6zwlatv4fe36a
+match = 3.6%%
+title = Hotels in Lebanon - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://startnewsinfo.ru/qohfbezucredfe99.html
 
 [news.google.it]
 match = -3.6%%
@@ -190,4 +190,9 @@ url = https://www.signaturetravelnetwork.com/deals/shell.cfm?link=https://doktor
 match = 4.0%%
 title = Scott adsit imdb [3972yK]
 url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=https://xn--80aaflte4h.xn--p1ai/59621743tovarovdomcomv4fe36a
+
+[rainocup.com]
+match = -57.1%%
+title = News educations days Student Bag Fashion Backpacks ...
+url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/82643951t1t8latv4fe36a
 
