--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-10 05:15:35
+lastsearch = 2024-07-10 07:58:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,13 +22,13 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -273.3%%
-title = OPPO RENO10 Cực kỳ xịn xò đang mở bán tại tất cả các cửa ...
-url = https://www.tiktok.com/@thodiasoctrang/video/7262708588185931015
+match = -266.7%%
+title = Tui thấy cái đoạn nó chỉ uống sữa là nuôi nhàn nhất ấy! Giờ ...
+url = https://www.tiktok.com/@uttwins/video/7388515743945575688
 
 [www.reddit.com]
-match = -33.3%%
-title = Chiều cao 1m80 trên thế giới
+match = -120.0%%
+title = Chiều cao 1m80 trên thế giới : r/vozforums
 url = https://www.reddit.com/r/vozforums/comments/xcdoeo/chiều_cao_1m80_trên_thế_giới/
 
 [mysofa.vn]
