--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-10 05:34:45
+lastsearch = 2024-07-10 09:01:48
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -175,4 +175,9 @@ url = https://www.beemart.vn/khay-da-18-vien-hinh-thoi-vang-vinh-truong
 match = -25.0%%
 title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
+
+[abina.vn]
+match = -35.7%%
+title = Viên Nhau Thai Cừu Age No More Ovine Placenta 60 viên
+url = https://abina.vn/vien-nhau-thai-cuu-age-no-more-ovine-placenta-60-vien/
 
