--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-10 05:45:55
+lastsearch = 2024-07-10 10:16:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -137.5%%
-title = Bus Vĩnh Phúc (VP01,03,04,05,06,07,08,09,10)
-url = https://www.facebook.com/groups/845021106177838/
+match = -218.8%%
+title = 08-06-2024 Thời sự chiều 18h30 | 08-06-2024 Thời sự chiều ...
+url = https://www.facebook.com/soctrangtv/videos/08-06-2024-thời-sự-chiều-18h30/840287204820537/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -580,4 +580,9 @@ url = http://caobangtv.vn/tin-tuc-n74744/bao-lac-kiem-tra-tien-do-thuc-hien-cac-
 match = -62.5%%
 title = LIÊN LẠC BỘ PHẬN CHĂM SÓC KHÁCH HÀNG
 url = https://fecredit.com.vn/thong-tin/lien-lac-bo-phan-cham-soc-khach-hang/
+
+[rapthang8.com]
+match = -100.0%%
+title = RẠP THÁNG 8 > Home > LichChieu - Hà Nội
+url = http://rapthang8.com/Home/LichChieu.aspx
 
