--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-10 04:28:57
+lastsearch = 2024-07-10 10:19:27
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
+url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
 match = -76.2%%
