--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-10 08:03:39
+lastsearch = 2024-07-10 10:22:38
 
 [demxanh.com]
 match = -42.9%%
@@ -13,8 +13,8 @@ url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.ht
 
 [www.diepxuan.com]
 match = 25.0%%
-title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
+title = Điệp Xuân Vỏ chăn ks DreamLand 200x230
+url = https://www.diepxuan.com/vo-chan-ks-dreamland-200x230.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = 3.6%%
-title = Hotels in Lebanon - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://startnewsinfo.ru/qohfbezucredfe99.html
+match = -25.0%%
+title = Mypark rep nba 2k16 [aVEolJ] - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1awbidf.xn--p1ai/47598136misclinick3fe43a
 
 [news.google.it]
 match = -3.6%%
