--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-07-10 05:32:35
+lastsearch = 2024-07-10 10:22:49
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -22,9 +22,9 @@ title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
 url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [elec-horeca.com]
-match = 15.0%%
-title = Nệm lò xo everon tại Đà Nẵng
-url = https://elec-horeca.com/nem-lo-xo-everon-tai-da-nang-id281.html
+match = 10.0%%
+title = Đại Lý Nệm Everon tại Đà Nẵng
+url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
 
 [tiki.vn]
 match = -20.0%%
@@ -74,7 +74,7 @@ url = http://nemxinh.net/filter/nem+140x200
 [everon.vip]
 match = 0.0%%
 title = NỆM EVERON
-url = https://everon.vip/nem?page=1&brands=1
+url = https://everon.vip/nem?page=1&productdimensions=2033,347,2005,1999,1974,830,847,1430,1389,1268,1129,1155,1077,846,1084,1091,1092,1093,1094,1095,1127,1128,1154,1156,1157,1189,1190,1191,1192,1193,1194,1195,1196,1266,1267,1269,1301,1302,1303,1270,1304,714,707,774,832,831,693,715,692,705,706,710,788,833,547,711,840,590,771,787,842,843,844,785,829,841,1305,772,1199,171,181,192,202,215,708,845,770,26,786,709,712,713,584,585,583,582,586,587,588,589,591,592,593,550,548,557,513,491,492,493,484,41
 
 [everonvietnam.com]
 match = -135.0%%
