--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-10 10:49:45
+lastsearch = 2024-07-10 11:17:03
 
 [shopee.vn]
 match = 2.9%%
@@ -23,8 +23,8 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
 match = 14.7%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+title = Chiếu điều hòa tencel - Chiếu cao su non có mát không?
+url = https://demxanh.com/chieu-dieu-hoa-tencel-chieu-cao-su-non-co-mat-khong.html
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -42,9 +42,9 @@ title = Chiếu điều Hòa Cao Su Non Là Gì ...
 url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [suongtuyet.com]
-match = 2.9%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 17.6%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [www.olbedding.com]
 match = 11.8%%
@@ -82,9 +82,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [vtvhyundai.vn]
-match = 14.7%%
-title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+match = 26.5%%
+title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
 
 [ru9.vn]
 match = 8.8%%
