--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-10 05:55:40
+lastsearch = 2024-07-10 11:24:38
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlenNIsm5&sig=ACfU3U0g0HoOnUiLsDFani9n1Ejhr-GiuA&hl=en&sa=X&ved=2ahUKEwj56ajuhpuHAxV7lokEHed6CpIQ6AF6BAgyEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlenPIppe&sig=ACfU3U3wc_3yZhl29VCIFxh30crnKOb0QQ&hl=en&sa=X&ved=2ahUKEwic75uy0JuHAxWdjokEHX9vBZ0Q6AF6BAgzEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
