--- a/images/ruot-nem-warmdream-180x200x14/config.ini
+++ b/images/ruot-nem-warmdream-180x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x14.html
 lastopen = 2024-06-11 13:10:27
 
 [search]
-lastsearch = 2024-07-10 06:19:08
+lastsearch = 2024-07-10 11:17:34
 
 [www.diepxuan.com]
-match = 58.6%%
-title = Điệp Xuân Ruột nệm Warmdream 180x200x05
-url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x05.html
+match = 3.4%%
+title = Ruột nệm Warmdream 180x200x14 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/ruot-nem-warmdream-180x200x14.html
 
 [www.warrelics.eu]
 match = -10.3%%
