--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-10 04:33:13
+lastsearch = 2024-07-10 11:35:52
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -126.3%%
-title = Tuyệt chiêu khử mùi cơ thể hiệu quả trong những ngày ...
-url = https://trithucvn.co/doi-song/tuyet-chieu-khu-mui-co-the-hieu-qua-trong-nhung-ngay-nang-nong.html
+match = -136.8%%
+title = Trứng muối sống và trứng muối nấu chín có gì khác nhau?
+url = https://trithucvn.co/doi-song/trung-muoi-song-va-trung-muoi-nau-chin-co-gi-khac-nhau.html
 
 [bptv.vn]
 match = -57.9%%
