--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-10 06:30:58
+lastsearch = 2024-07-10 11:35:41
 
 [demxanh.com]
-match = 0.0%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 48.1%%
+title = Chiếu điều hòa cao su non màu tím
+url = https://demxanh.com/chieu-cao-su-non-mau-tim.html
 
 [goni.vn]
 match = 14.8%%
@@ -22,9 +22,9 @@ title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [congtynemthangloi.com]
 match = -29.6%%
@@ -90,4 +90,9 @@ url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-c
 match = 0.0%%
 title = 
 url = https://chieutrelinhchi.com/chieu-may-dieu-hoa/51
+
+[www.facebook.com]
+match = 60.0%%
+title = Chiếu Điều Hòa Cao Su Non
+url = https://www.facebook.com/groups/753270865357544/
 
