--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-10 05:12:44
+lastsearch = 2024-07-10 11:43:55
 
 [www.tui.co.uk]
 match = -153.3%%
@@ -14,7 +14,7 @@ url = https://www.tui.co.uk/flight/where-we-fly
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-278
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
 
 [www.changiairport.com]
 match = -213.3%%
@@ -92,9 +92,9 @@ title =
 url = https://www.cruise.co.uk/bulletin/the-best-way-to-experience-singapore-and-its-cruise-port/
 
 [www.instagram.com]
-match = -106.7%%
-title = Tui (@tuiee) • Instagram photos and videos
-url = https://www.instagram.com/tuiee/
+match = -100.0%%
+title = 𝒯𝒽𝑒 𝒯𝓊𝒾 𝒞𝑜𝓁𝓁𝑒𝒸𝓉𝒾𝑜𝓃 (@thetuicollection)
+url = https://www.instagram.com/thetuicollection/
 
 [www.tuigroup.com]
 match = 0.0%%
